--- a/style.css
+++ b/style.css
@@ -356,7 +356,7 @@ h3{
     font-weight: 600;
 }
 
-.icons .fa-brands, .fa-regular{
+.icons .fa-brands{
     color: #f44336;
     margin: 0 13px;
     cursor: pointer;
