--- a/style.css
+++ b/style.css
@@ -269,6 +269,11 @@ h3{
     text-align: left;
 }
 
+.facilities-col img:hover{
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
+    transition: 0.8s;
+}
+
 /* testimonials */
 
 .testimonials{
@@ -307,6 +312,11 @@ h3{
 
 .testimonials-col .fa-solid, .fa-regular{
     color: #f44336;
+}
+
+.testimonials-col:hover{
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
+    transition: 0.8s;
 }
 
 @media(max-width: 700px){
