--- a/style.css
+++ b/style.css
@@ -15,13 +15,13 @@
 
 nav{
     display: flex;
-    padding: 2% 6%;
+    padding: 2% 5%;
     justify-content: space-between;
     align-items: center;
 }
 
 nav img{
-    width: 150px;
+    width: 60px;
 }
 
 .nav-links{
@@ -131,7 +131,7 @@ nav .fa-solid{
 
 /* department */
 
-.department{
+.course{
     width: 80%;
     margin: auto;
     text-align: center;
@@ -145,7 +145,7 @@ h1{
 
 p{
     color: #777;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 300;
     line-height: 22px;
     padding: 10px;
@@ -154,10 +154,10 @@ p{
 .row{
     margin-top: 5%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
-.department-col{
+.course-col{
     flex-basis: 31%;
     background: #fff3f3;
     border-radius: 10px;
@@ -173,7 +173,15 @@ h3{
     margin: 10px 0;
 }
 
-.department-col:hover{
+.course-col p{
+    text-align: left;
+}
+
+.course-col p .fa-regular{
+    color: #777;
+}
+
+.course-col:hover{
     box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
 }
 
@@ -230,7 +238,6 @@ h3{
     position: absolute;
     opacity: 0;
     transition: 0.8s;
-
 }
 
 .layer:hover h3{
@@ -281,6 +288,12 @@ h3{
     margin: auto;
     padding-top: 100px;
     text-align: center;
+}
+
+.testimonials .row{
+    margin-top: 5%;
+    display: block;
+    justify-content: space-between;
 }
 
 .testimonials-col{
@@ -357,7 +370,6 @@ h3{
     width: 100%;
     text-align: center;
     padding: 30px 0;
-
 }
 
 .footer h4{
@@ -419,6 +431,42 @@ h3{
     padding: 15px 0 25px;
 }
 
+.about-ceo-col{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 50px;
+}
+
+.about-ceo-col p{
+    font-size: 16px;
+    color: #777;
+    font-weight: 300;
+    line-height: 22px;
+    padding: 10px;
+}
+
+.about-ceo-img{
+    display: flex;
+    margin-top: 5%;
+    justify-content: center;
+}
+
+.about-vision_mission{
+    margin-top: 50px;
+}
+
+.about-vision{
+    width: 80%;
+    margin-top: 20px;
+    justify-content: space-between;
+}
+
+.about-vision p{
+    font-size: 16px;
+    color: #777;
+}
+
 .red-btn{
     border: 1px solid #f44336;
     background: transparent;
@@ -477,7 +525,7 @@ h3{
     box-sizing: border-box;
 }
 
-.comment-box{
+/* .comment-box{
     border: 1px solid #ccc;
     margin: 50px 0;
     padding: 10px 20px;
@@ -499,7 +547,7 @@ h3{
 
 .comment-form button{
     margin: 10px 0;
-}
+} */
 
 @media(max-width:700px){
     .sub-header h1{
@@ -515,8 +563,13 @@ h3{
     padding: 80px 0;
 }
 
+.location h1{
+    text-align: center;
+}
+
 .location iframe{
     width: 100%;
+    padding: 40px 12px;
 }
 
 .contact-us{
