--- a/style.css
+++ b/style.css
@@ -477,7 +477,7 @@ h3{
     color: #fff;
 }
 
-/* blog content */
+/* blog content
 
 .blog-content{
     width: 80%;
@@ -523,7 +523,7 @@ h3{
     color: #555;
     padding: 8px;
     box-sizing: border-box;
-}
+} */
 
 /* .comment-box{
     border: 1px solid #ccc;
